appId: com.qazandoqafood
---
- launchApp  # Inicia o aplicativo
- runFlow: loadElements.yaml  # Carrega todos os scripts de elementos definidos em loadElements.yaml
# Test Steps


- tapOn:
    id: ${output.login.email}  # Toca no campo de e-mail
- assertVisible: ${output.login.emailLabel}  # Verifica se o rótulo "E-mail" está visível
- inputText:
    id: ${output.login.email}  # Insere o texto no campo de e-mail
    text: "teste@teste.com"

- tapOn:
    id: ${output.login.password}  # Toca no campo de senha
- assertVisible: ${output.login.passwordLabel}  # Verifica se o rótulo "Senha" está visível
- inputText:
    id: ${output.login.password}  # Insere o texto no campo de senha
    text: "123456"

- tapOn:
    id: ${output.login.loginBtn}  # Toca no botão de login


- tapOn:
    text: ${output.pedido.selectAddress}  # Toca na opção "Selecione seu endereço..."
- assertVisible:
    id: ${output.pedido.alertTitle}  # Verifica se o título do alerta está visível
- tapOn:
    id: ${output.pedido.alertButton}  # Toca no botão de confirmação do alerta
- tapOn:
    text: ${output.pedido.restaurantName}  # Toca na opção "Pastelaria da Maria"
- tapOn:
    id: ${output.pedido.firstItemTitle}  # Toca no título do primeiro item da lista
    index: 0
- tapOn:
    point: "95%,43%"  # Toca em uma posição específica na tela (x: 95%, y: 43%)
- tapOn:
    id: ${output.pedido.cartButton}  # Toca no botão para abrir o carrinho
- tapOn:
    id: ${output.pedido.confirmOrderButton}  # Toca no botão para confirmar o pedido
- scrollUntilVisible:
    element: ${output.pedido.paymentOption}  # Rola a tela até que o elemento com o texto "Dinheiro" esteja visível
    direction: DOWN
- tapOn:
    text: ${output.pedido.paymentOption}  # Seleciona a opção de pagamento em dinheiro
- tapOn:
    id: ${output.pedido.finalizeOrderButton}  # Toca no botão para finalizar o pedido
- tapOn:
    text: ${output.pedido.orderSuccessMessage}  # Verifica se a mensagem "Pedido realizado" foi exibida